<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ima.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="30">



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nameApp"
                android:textColor="@color/coklatPekat"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:textAlignment="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical"
            android:textColor="@color/coklatPekat"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginHere"
                android:textColor="@color/coklatPekat"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingBottom="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/nip"
                android:textColor="@color/coklatPekat"
                android:textColorHint="@color/coklatPekat"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_username"
                android:backgroundTint="@color/coklatPekat"
                android:paddingLeft="0dp"
                android:textSize="16dp"
                android:maxLines="1"/>

            <EditText
                android:hint="@string/password"
                android:id="@+id/password"
                android:paddingLeft="0dp"
                android:drawableLeft="@drawable/ic_password"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:backgroundTint="@color/coklatPekat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/coklatPekat"
                android:textColorHint="@color/coklatPekat"
                android:maxLines="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/coklatPekat"
                android:background="@drawable/button_border"
                android:id="@+id/btnLogin"
                android:textSize="18dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
