<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_machine_data_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ima.activity.DetailMachineData_Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="30">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/DetailAddMachineData"
                android:textColor="@color/coklatPekat"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:textAlignment="center"
                android:id="@+id/textView2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:textColor="@color/coklatPekat"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/TableLayoutAddMachineData1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TableRow
                        android:id="@+id/TableRowMachineName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        >

                        <TextView
                            android:id="@+id/text_machine_name"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".35"
                            android:textSize="11sp"
                            android:text="@string/MachineName"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        <TextView
                            android:id="@+id/TextVewM4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".05"
                            android:gravity="center"
                            android:text=":" android:textSize="11sp"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                        <TextView
                            android:id="@+id/detail_text_machine_name"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".5"
                            android:textSize="11sp"
                            android:text="@string/MachineName"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRowMachineType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        >

                        <TextView
                            android:id="@+id/text_machine_Type"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".35"
                            android:textSize="11sp"
                            android:text="@string/MachineType"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        <TextView
                            android:id="@+id/TextVewM5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".05"
                            android:gravity="center"
                            android:text=":" android:textSize="11sp"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                        <TextView
                            android:id="@+id/detail_text_machine_Type"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".5"
                            android:textSize="11sp"
                            android:text="@string/MachineType"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRowMachineQR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        >

                        <TextView
                            android:id="@+id/text_machine_QR"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".35"
                            android:textSize="11sp"
                            android:text="@string/MachineQRcode"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        <TextView
                            android:id="@+id/TextVewM6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".05"
                            android:gravity="center"
                            android:text=":" android:textSize="11sp"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                        <TextView
                            android:id="@+id/detail_text_machine_QR"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".5"
                            android:textSize="11sp"
                            android:text="@string/MachineQRcode"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRowMachineLastMaintenance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        >

                        <TextView
                            android:id="@+id/text_machine_LastMaintenance"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".35"
                            android:textSize="11sp"
                            android:text="@string/LastMaintenanceDate"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        <TextView
                            android:id="@+id/TextVewM7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".05"
                            android:gravity="center"
                            android:text=":" android:textSize="11sp"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                        <TextView
                            android:id="@+id/detail_text_machine_LastMaintenance"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_weight=".5"
                            android:textSize="11sp"
                            android:text="@string/LastMaintenanceDate"
                            android:layout_span="1"
                            android:textStyle="bold"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="270dp"
                        android:paddingTop="10dp"
                        >
                        <GridView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/gv"
                            android:numColumns="3"
                            android:layout_weight="1">
                        </GridView>

                  </LinearLayout>


                    <LinearLayout
                        android:id="@+id/TableRow22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="30dp"
                        >

                        <Button
                            android:id="@+id/btnMachineImage"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_span="4"
                            android:background="@drawable/button_border"
                            android:text="Machine Image"
                            android:textColor="#FFFFFF"
                            android:textSize="11sp" />


                    </LinearLayout>

                </TableLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
